<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    android:background="@drawable/tile_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/addDialogTitle"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/add_task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:maxLines="1"
        android:hint="Write Your Task Here"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:text="@string/cancelBtn"/>

        <Button
            android:id="@+id/dialog_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/addBtn"/>
    </LinearLayout>

</LinearLayout>