<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_gravity="center"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_user"/>

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/fullName"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Full Name"/>


            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/phoneNo"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Mobile Number"/>

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/email"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint" />

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/password"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>

        <EditText
            style="@style/modifiedEditText"
            android:id="@+id/employeeNo"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:hint="Employee Id"
            android:maxLines="1" />

        <EditText
            style="@style/modifiedEditText"
            android:id="@+id/officeAddress"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:hint="Office Address"
            android:maxLines="1"/>



            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />


            <Spinner
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        <Button
            style="@style/loginButton"
            android:id="@+id/register"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            style="@style/parent"
            android:id="@+id/alreadyHaveAccount"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
