<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Todo"
    tools:showIn="@layout/activity_todo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mode_selector_panel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="2dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/set_all_check_all_on"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_check_box_off"
                android:visibility="visible"/>

            <ImageButton
                android:id="@+id/set_all_check_all_off"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_check_box_on"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mode_selector_button_background"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/modeSelectorAll"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/show_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/modeSelectorActive"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/show_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/modeSelectorCompleted"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/clear_completed_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingEnd="10dp"
                android:padding="5dp"
                android:gravity="end"
                android:text="@string/clearCompleted"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingTop="5dp"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/left_items_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/left_items_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>